src/todo-istio.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-api
  labels:
    app: todoapp-api
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: todoapp-api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: todoapp-api-v1
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"48f39c4792663fa70ea9c6eb9c29612031cbe36a3850b41faa407da434ec11d3","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"],"imagePullSecrets":null}'
      creationTimestamp: null
      labels:
        app: todoapp-api
        version: v1
    spec:
      containers:
      - image: gcr.io/todoapp-221909/todoapp-api:v1
        imagePullPolicy: IfNotPresent
        name: todo
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
      - args:
        - proxy
        - sidecar
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - todoapp-api
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:15005
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 10s
        - --proxyAdminPort
        - "15000"
        - --controlPlaneAuthPolicy
        - MUTUAL_TLS
        image: docker.io/istio/proxyv2:1.0.3
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        ports:
        - containerPort: 15090
          name: http-envoy-prom
          protocol: TCP
        resources:
          requests:
            cpu: 10m
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
# apiVersion: extensions/v1beta1
# kind: Deployment
# metadata:
#   name: todo-v2
# spec:
#   replicas: 1
#   template:
#     metadata:
#       labels:
#         app: todo
#         version: v2
#     spec:
#       containers:
#       - name: todo
#         image: istio/examples-todo-v2
#         resources:
#           requests:
#             cpu: "100m"
#         imagePullPolicy: IfNotPresent #Always
#         ports:
#         - containerPort: 5000
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: todoapp-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todoapp
spec:
  hosts:
  - "*"
  gateways:
  - todoapp-gateway
  http:
  - match:
    - uri:
        exact: /todos
    route:
    - destination:
        host: todoapp-api
        port:
          number: 8080
